add function filter into Product pages

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_ANALYTICS_ID=UA-114361661-6
-NEXT_PUBLIC_BASE_URL=https://4980-42-114-170-229.ngrok-free.app
+NEXT_PUBLIC_BASE_URL=https://f804-27-72-146-175.ngrok-free.app
