--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_ANALYTICS_ID=UA-114361661-6
-NEXT_PUBLIC_BASE_URL=https://5338-42-114-126-226.ngrok-free.app
+NEXT_PUBLIC_BASE_URL=https://a80a-1-53-8-70.ngrok-free.app
+NEXT_PUBLIC_REFRESH_TOKEN_SECRET= jwtghkj
