--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "next": "^12.3.4",
     "next-redux-wrapper": "^6.0.2",
