add account page and add login function

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_ANALYTICS_ID=UA-114361661-6
-NEXT_PUBLIC_BASE_URL=https://a80a-1-53-8-70.ngrok-free.app
+NEXT_PUBLIC_BASE_URL=https://b5e6-58-187-228-237.ngrok-free.app
 NEXT_PUBLIC_REFRESH_TOKEN_SECRET= jwtghkj
+NEXT_PUBLIC_ACCESS_TOKEN_SECRET=jwtabc
