--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "next": "^12.3.4",
     "next-redux-wrapper": "^6.0.2",
@@ -39,6 +39,7 @@
     "use-onclickoutside": "^0.3.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.34",
     "@types/react": "^18.0.9",
