--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "next"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
