--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 NEXT_PUBLIC_ANALYTICS_ID=UA-114361661-6
-NEXT_PUBLIC_BASE_URL=https://53b2-58-187-228-237.ngrok-free.app
-NEXT_PUBLIC_REFRESH_TOKEN_SECRET= jwtghkj
-NEXT_PUBLIC_ACCESS_TOKEN_SECRET=jwtabc
+NEXT_PUBLIC_BASE_URL=https://ac66-27-72-146-175.ngrok-free.app
+NEXT_PUBLIC_ACCESS_TOKEN_SECRET=jwtabcd
