--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "bootstrap": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "next": "^12.3.4",
@@ -38,6 +39,8 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass": "^1.26.10",
+    "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^6.5.1",
     "swr": "^0.3.2",
     "use-onclickoutside": "^0.3.1"
