--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_ANALYTICS_ID=UA-114361661-6
-NEXT_PUBLIC_BASE_URL=https://f914-27-72-146-175.ngrok-free.app
+NEXT_PUBLIC_BASE_URL=https://42f2-27-72-146-175.ngrok-free.app
 NEXT_PUBLIC_ACCESS_TOKEN_SECRET=jwtabcd
