--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_ANALYTICS_ID=UA-114361661-6
-NEXT_PUBLIC_BASE_URL=https://42f2-27-72-146-175.ngrok-free.app
+NEXT_PUBLIC_BASE_URL=https://cce1-2001-ee0-4a6b-c2f0-c890-a5b3-3a2c-c1d3.ngrok-free.app
 NEXT_PUBLIC_ACCESS_TOKEN_SECRET=jwtabcd
