--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_ANALYTICS_ID=UA-114361661-6
-NEXT_PUBLIC_BASE_URL=https://3351-2001-ee0-4a6b-c2f0-713f-c7c3-ba2c-9f4c.ngrok-free.app
+NEXT_PUBLIC_BASE_URL=https://5ca7-27-72-146-175.ngrok-free.app
 NEXT_PUBLIC_ACCESS_TOKEN_SECRET=jwtabcd
